Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3922

CMake project support does not support defines (should use eclipse project files)

    XMLWordPrintable

Details

    Description

      Definitions added from CMake (from add_definitions()) are not loaded into QT-Creator,
      This is a problem for development because some areas of code are considered commented out which should not be.

      I looked into this further, thinking that it was a missing feature from CMake project generator since it is possible to add definitions into codeblocks project files, however cmake's codeblocks project files work by calling "make" directly, in this mode there is no option to set definitions from codeblocks UI, so it seems codeblocks project files are correct.

      Accepting that CMake's code::blocks wont write definitions, it seems like a better option to use Eclipse project files which have definitions.

      Quick script I wrote to use eclipse project files in QtCreator.
      http://www.pasteall.org/19595/python

      Patch on CMake to write definitions, wrote this before realizing codeblocks wont use the values.
      http://www.graphicall.org/ftp/ideasman42/code_blocks.diff

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dt Daniel Teske
              ideasman42 Campbell Barton
              Votes:
              7 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes