CMake: Read macro definitions

The CodeBlocks generator writes for each macro definition
<Add option=-D... />
(also make getters const)

Task-number: QTCREATORBUG-3922
Change-Id: I93e10397e76ad4f34126a76c4c36e4529d48d0ad
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>